<resources>
    <string name="app_name">FamilyMap</string>

    <string name="password_hint">est1847</string>
    <string name="host_ip_prompt">Host IP</string>
    <string name="port_number_prompt">Port Number</string>
    <string name="password_prompt">password</string>
    <string name="username_prompt">Username</string>

    <string name="last_name_prompt">Last Name</string>
    <string name="first_name_prompt">First Name</string>
    <string name="gender_prompt">Gender</string>

    <string name="show_life_story_lines_prompt">Show Life Story Lines</string>
    <string name="show_family_tree_lines_prompt">Show Family Tree Lines</string>
    <string name="map_type_prompt">Map Type</string>
    <string name="spouse_lines_prompt">Show Spouse Lines</string>
    <string name="from_family_map_service_prompt">From Family Map Service</string>
    <string name="logout_prompt">Returns to Login Screen</string>


    <string name="default_server">192.168.14.40</string>
    <string name="default_port">8080</string>
    <string name="default_username">sheila</string>
    <string name="default_password">parker</string>


    <string name="Login_Title">Login to FamilyMap Server</string>
    <string name="title_activity_maps">Map</string>
    <string name="placeholder">placeholder</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="title_activity_settings">Settings</string>


    <string name="re_sync_data_title">Re-sync data</string>
    <string name="logout_title">Logout</string>
    <string name="life_story_lines_title">Life Story Lines</string>
    <string name="family_tree_lines_title">Family Tree Lines</string>
    <string name="spouse_lines_title">Spouse Lines</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search_prompt">Search</string>
    <string name="filter">Filter</string>
    <string name="person_life_events_title">Life Events</string>
    <string name="person_family_list_title">Family</string>
    <string name="returnToHome">Go Home</string>


</resources>
